[tool.poetry]
name = "ukrr-models"
version = "2.3.0"
description = "Models of the UKRR database"
authors = ["UK Renal Registry"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^2.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
mypy = "^1.9.0"
bandit = "^1.7.8"
tox = "^4.14.2"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = "sqlalchemy.ext.mypy.plugin"

[tool.bandit]
exclude_dirs = [
    "tests",
    ".vscode",
    ".tox",
    ".ruff_cache",
    ".pytest_cache",
    ".mypy_cache",
    "dist",
]
